--- a/portfolio.html
+++ b/portfolio.html
@@ -299,14 +299,7 @@
 
           <form class="subscribe">
             <b class="subscribe-call">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
-        <div class="subscribe-container">          
-              
-            <label for="mail-ftr">
-                E-mail
-                <input class="mail" type="email" name="email" id="mail-ftr" />                      
-            </label>
-        </div>
-       
+            <label for=""><input class="subscribe-field" type="email" name="email" placeholder="E-mail"/></label>     
             <button class="btn-submit" type="submit">Подписаться
                 <svg class="icon-btn" width="24px" height="24px">
                     <use href="./images/symbol-defs.svg#icon-icon-send"></use>
